2010-12-20  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* include/dlvhex/ID.hpp: add subkind predicate inside mainkind term
	* include/dlvhex/Predicate.hpp: separating predicate from term
	* include/dlvhex/PredicateTable.hpp: separating predicate from term table
	* Committed revision 2529.

	* include/dlvhex/ID.hpp: adding PredicateList besides term tuple
	* include/dlvhex/ProgramCtx.h: adding edbList, idbList, and inputList (that contain Predicate List)
	* Committed revision 2530.

	* include/dlvhex/TermTable.hpp: add struct PredicateNameTag, for tag in PredicateTable
	* include/dlvhex/HexGrammarPTToASTConverter.h: adapting term table to the separation of term and predicate table
	* include/dlvhex/ProgramCtx.h: add predicate table
	* src/dlvhex/HexGrammarPTToASTConverter.cpp: adapting term table to the separation of term and predicate table
	* src/dlvhex/TestHexParserModule.cpp: adapting term table to the separation of term and predicate table
	* src/dlvhex/ModuleSyntaxChecker.cpp: adapting term table to the separation of term and predicate table
	* src/dlvhex/ID.cpp: adding term.predicate in print()
	* src/dlvhex/ProgramCtx.cpp: add predicate table

2010-12-16  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* include/dlvhex/HexGrammarPTToASTConverter.cpp: change the way predicate namespaced
	* src/dlvhex/HexGrammarPTToASTConverter.cpp: change the way predicate namespaced
	* Committed revision 2524.

2010-12-14  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* include/dlvhex/ModuleSyntaxChecker.h: adding method verifySyntax that take care all of the process of module syntax check
	* src/dlvhex/ModuleSyntaxChecker.cpp: adding method verifySyntax that take care all of the process of module syntax check 
	* testsuite/TestHexParserModule.cpp: adding various test cases for module syntax check
	* examples/module1.hex: m1 as in the paper
	* examples/module2.hex: m2 as in the paper
	* examples/module3.hex: m3 as in the paper