@@ -48,6 +48,7 @@ namespace impl
 	// these tags are special
 	struct TermTag {}; // Term
         struct PredicateNameTag {}; // Predicate
+        struct ModuleNameTag {}; // Module
 	struct TextTag {}; // OrdinaryGroundAtom
 	struct TupleTag {}; // OrdinaryAtom, OrdinaryGroundAtom
 	struct PredicateTag {}; // ExternalAtom 
